# ralph-ideate

./: .coderabbit.yaml  .gitignore  CLAUDE.md  LICENSE  README.md  README_PYPI.md  pyproject.toml  renovate.json
.claude/: settings.json
.claude/skills/ralph-ideate.create/: SKILL.md
.claude/skills/ralph-ideate.explore/: SKILL.md
.claude/skills/ralph-ideate.explore/scripts/: loop-context.sh  setup-ralph-ideate.sh
.claude/skills/ralph-ideate.refine/: SKILL.md
.claude/skills/reviewloop/: SKILL.md
.claude/skills/reviewloop/scripts/: review-comments.sh  review-wait.sh
.github/workflows/: release.yml
.specify/memory/: constitution.md
.specify/scripts/bash/: update-agent-context.sh
src/ralph_idea_cli/: cli.py  init.py  variants.py
src/ralph_idea_cli/templates/ralph-ideate.create/: SKILL.md
src/ralph_idea_cli/templates/ralph-ideate.explore/: SKILL.md
src/ralph_idea_cli/templates/ralph-ideate.explore/scripts/: loop-context.sh  setup-ralph-ideate.sh
src/ralph_idea_cli/templates/ralph-ideate.refine/: SKILL.md
src/ralph_idea_cli/templates/variants/investment/ralph-ideate.create/: SKILL.md
src/ralph_idea_cli/templates/variants/investment/ralph-ideate.refine/: SKILL.md
src/ralph_idea_cli/templates/variants/startup-ideas/ralph-ideate.create/: SKILL.md
src/ralph_idea_cli/templates/variants/startup-ideas/ralph-ideate.explore/: SKILL.md
src/ralph_idea_cli/templates/variants/startup-ideas/ralph-ideate.refine/: SKILL.md
